# rover-dev

PyTorch AR Tag CNN/: .gitignore  cnn.py  cnn_mobile.py  id_test.py  requirements.txt  testbench.py
ar-tag-experiment/: CMakeLists.txt  detect.cpp
cascade-classifier/: annotations-save.txt  cascade.xml  cmds  detect.cpp  negative-list.txt  positive-vec.txt
cascade-classifier/classifier/: stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml
id-detect/: .gitignore  CMakeLists.txt  ID.cpp
point-cloud-renderer/: CMakeLists.txt  meson.build  reader.h  viewer.cpp  viewer.h
point-cloud-renderer/build-cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
point-cloud-renderer/build-ninja/: .ninja_deps  .ninja_log  build.ninja
point-cloud-renderer/build-ninja/meson-logs/: meson-log.txt
point-cloud-renderer/builddir/: build.ninja  compile_commands.json
point-cloud-renderer/builddir/meson-logs/: meson-log.txt
point-cloud-renderer/compile/: build.ninja  compile_commands.json
point-cloud-renderer/compile/meson-logs/: meson-log.txt
solvepnp/: CMakeLists.txt  SN9642053 (1).conf  SolvePNP.cpp
